# ss13-vox

./: .babelrc  .gitattributes  .gitignore  .gitmodules  BUILD.py  LEXICON-README.md  README.md  announcements.txt  config.yml  create.py  daemon.py  fixallstar.py  generate.sh  lexicon.txt  organize.py  package.json  paths.yml  pip.json  post-process.sh  probe_file.sh  pyproject.toml  requirements-dev.txt  requirements.txt  resynth_sounds.sh  setup.py  sing.sh  test.py  testwords.txt  vg-chemistry.txt  vnm.state  vnm.yml  voxtest.txt  voxwords.txt  webpack.config.js
coffee/: aivoice.coffee
scss/: style.scss
songs/: README.md  daisy.xml
ss13vox/: consts.py  otfclient.py  phrase.py  proc.py  pronunciation.py  runtime.py  utils.py  voice.py
ss13vox/daemon/: config.py  gameserver.py  phraseref.py
templates/: tglist.jinja  vglist.jinja
tools/: otftool.py
wordlists/: allstar.txt  common-clean.txt  common.txt  heynow.txt  profanity.txt
wordlists/vg/: announcements.txt  antags.txt  chemistry.txt  mining.txt  misc.txt  songs.txt
