[tool.poetry]
name = "ss13-vox"
version = "0.0.1"
description = "Announcements wordlist generator for SS13"
authors = ["Rob Nelson <nexisentertainment@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pybuildtools = "^0.4.11"
requests = "^2.27.1"
Werkzeug = "^2.1.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.931"
poetryup = "^0.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
